--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1646,7 +1646,7 @@ section,
   background-color: var(--surface-color);
   overflow: hidden;
   border-radius: 5px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 15px #064e211a;
   height: 100%;
 }
 
